fix height of image on mobile

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
 .card figure {
     margin-bottom: 1.1em;
     max-width: 300px;
+    height: 300px;
 }
 
 .card__img {
